--- a/zparkstyle.css
+++ b/zparkstyle.css
@@ -68,9 +68,10 @@ nav ul {
    list-style: none;
 }
 
-nav h1 {
+nav h1 a{
     font-size: 2.5rem;
     color : var(--darklavender);
+    text-decoration: none;
 }
 
 nav .menu-icon,.close-icon {
@@ -517,7 +518,7 @@ margin : 0 3px;
    background-color: var(--black); */
    color : var(--white);
    background-color: var(--darklavender);
-   box-shadow: ;
+   /* box-shadow: ; */
    width : fit-content;
    height : 60px;
    padding : 10px 20px;
