--- a/zparkstyle.css
+++ b/zparkstyle.css
@@ -16,6 +16,7 @@
     --interlavender : #393053;
     --lightlavender : #635985;
     --lightpink : #9E4784;
+    --darkpurple : #77037B;
 }
 
 * {
@@ -115,6 +116,9 @@ nav ul li a:hover::after {
    /* color: linear-gradient(to right,#c31432,#240b36); */
    color : whitesmoke;
    font-size: 2.5rem;
+   /* background: -webkit-linear-gradient(#FFAACF,#EA8FEA);
+   -webkit-background-clip: text;
+   -webkit-text-fill-color: transparent; */
 }
 
 .main {
@@ -143,11 +147,11 @@ nav ul li a:hover::after {
 .btn {
    text-decoration: none;
    margin: 40px 0px;
-   border : 2px solid var(--darklavender);
+   border : 2px solid var(--darkpurple);
    /* color : var(--pink);
    background-color: var(--black); */
    color : var(--white);
-   background-color: var(--darklavender);
+   background-color: var(--darkpurple);
    width : fit-content;
    height : 60px;
    padding : 10px 30px;
@@ -161,7 +165,8 @@ nav ul li a:hover::after {
 
 .btn:hover {
    background-color: var(--white);
-   color : var(--darklavender);
+   color : var(--darkpurple);
+   border : 2px solid var(--white);
    transform : 1s;
 }
 
@@ -712,7 +717,10 @@ form .btn {
        padding : 15px;
    }
    .main-content h1 {
-       font-size: 1rem;
+       font-size: 1.5rem;
+       /* background: -webkit-linear-gradient(var(--lightblue),var(--lightpink),var(--darkpurple));
+       -webkit-background-clip: text;
+       -webkit-text-fill-color: transparent; */
        line-height: 1em;
    }
    .main-content .home-content{
@@ -725,17 +733,22 @@ form .btn {
    }
    .textColor {
        padding-left: 0;
-       font-size : 20px
+       font-size : 2.2rem;
    }
 
    .btn {
       font-size: 15px;
-      width : fit-content ;
+      font-weight: bolder;
+      /* background-color: var(--darkpurple); */
+      /* color: var(--white); */
+      /* border: 2px solid var(--darkpurple); */
+      border-radius: 5px;
+      width : 300px ;
       height : 45px ;
       padding : 10px;
       display : flex ;
+      justify-content: center;
       margin: 30px auto;
-      text-decoration: none;
    }
 
    .main-content a {
@@ -809,10 +822,12 @@ form .btn {
 
   .about-col-1 {
    width: 100%;
-   background-size: 200px;
-   background-position: bottom;
+   background-size: 250px;
+   background-position: center;
+   width : 250px;
+   min-width: 250px;
    height : 300px;
-   align-self: flex-start;
+   justify-self : center;
   }
 
   .about-col-2 {
@@ -820,19 +835,43 @@ form .btn {
    margin: 20px 0;
   }
 
+  .about-col-2 h2 {
+   font-size: 1.5rem;
+  }
+
   .about-col-2 #skills,#experience,#education,#certificate {
 
    font-size: 13px;
    margin-right: 10px;
   }
-  /* ---------------------skills------------------- */
+  /* ---------------------SERVICES------------------- */
 
-  #skillset {
-     margin-top: 130px;
+  .services-container h2 {
+   font-size: 1.5rem;
   }
 
-   .skillset-list{
-   margin-top: 30px;
+  .services-list {
+   display: grid;
+   grid-template-columns: repeat(2,minmax(100px,200px));
+   grid-gap: 20px;
+  }
+  .services-list div{
+   padding : 20px;
+  }
+
+  .services-list div i{
+   font-size: 20px;
+   margin-bottom: 10px;
+  }
+  .services-list div #social-media {
+   font-size: 20px;
+   margin-bottom: 10px;
+  }
+  .services-list div h2 {
+   font-size: 1.5rem;
+  }
+  .services-list div p{
+   font-size : 10px;
   }
   /* -------------------portfolio----------------- */
 
