--- a/zparkstyle.css
+++ b/zparkstyle.css
@@ -771,7 +771,7 @@ form .btn {
    }
 
    nav ul {
-       background: var(--white);
+       background: linear-gradient(to right,var(--lightlavender),var(--white));
        position: fixed;
        top : 0;
        right : 0;
@@ -841,7 +841,7 @@ form .btn {
   }
 
   .about-col-2 h2 {
-   font-size: 1.5rem;
+   font-size: 1.75rem;
   }
 
   .about-col-2 #skills,#experience,#education,#certificate {
@@ -856,7 +856,7 @@ form .btn {
    margin : 0 10px 0;
   }
   .services-container h2 {
-   font-size: 1.5rem;
+   font-size: 1.75rem;
   }
 
   .services-list {
@@ -901,5 +901,67 @@ form .btn {
 
   #contact {
    margin-top: 30px;
+  }
+
+  .row-contact {
+   width : 100%;
+   padding : 10px;
+   display : flex;
+   flex-direction: column-reverse;
+   justify-content: space-between;
+   margin : 0;
+  }
+
+  .contact-right {
+    flex : 2;
+   background-size: 350px;
+   background-position: center;
+   background-repeat: no-repeat;
+   width :350px;
+   min-height :200px;
+   border-radius: 20px;
+  }
+  .contact-left {
+   flex : 3;
+   margin-top: 40px;
+  }
+  .contact-left h2 {
+   font-size : 1.5rem;
+  }
+  .contact-left .contact-content {
+   font-size: 1rem;;
+  }
+  .contact-btn {
+      font-size: 15px;
+      font-weight: bolder;
+      background-color: var(--darklavender); 
+      color: var(--white);
+      border: 2px solid var(--darklavender);
+      border-radius: 5px;
+      width : 250px ;
+      height : 45px ;
+      padding : 10px;
+      display : flex ;
+      justify-content: center;
+      margin: 30px auto;
+  }
+  .contact-left a{
+   text-decoration: none;
+  }
+  .contact-social-icons {
+   text-align: center;
+   display: flex;
+   justify-content: center;
+   margin : 0;
+  }
+  .contact-social-icons a {
+   font-size: 1.25rem;
+   margin : 0 10px;
+  }
+  /* -------------------------copyright---------------------- */
+  .copyright {
+   font-size : 0.75rem;
+   height: 30px;
+   padding : 10px;
   }
 }
