gradient color for zpark changed

--- a/zparkstyle.css
+++ b/zparkstyle.css
@@ -116,7 +116,7 @@ nav ul li a:hover::after {
    /* color: linear-gradient(to right,#c31432,#240b36); */
    color : whitesmoke;
    font-size: 3.5rem;
-   background: -webkit-linear-gradient(left,#DDBEBE,#EA8FEA,#F9E2AF);
+   background: -webkit-linear-gradient(90.05deg, rgb(181, 255, 211) 0.02%, rgb(209, 164, 255) 39.16%, rgb(255, 165, 175) 75.82%, rgb(255, 220, 164) 112%);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
 }
